css fix for overscroll on iOS

--- a/ember-mobile-menu/src/components/mobile-menu/mask.css
+++ b/ember-mobile-menu/src/components/mobile-menu/mask.css
@@ -13,6 +13,7 @@
   opacity: 0;
   transition: none;
   touch-action: pan-y;
+  overscroll-behavior: contain;
   will-change: opacity;
   visibility: hidden;
   outline: none;
